--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "10.4.2",
     "axios": "0.26.0",
     "next": "12.0.10",
+    "next-cookie": "2.8.0",
+    "next-cookies": "2.0.3",
     "postcss": "8.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
